# kyc-crew

./: .gitignore  Dockerfile  README.md  docker-compose.yml  key-mermaid.mmd  pyproject.toml  report.md
knowledge-base/clients/: Al-Farid Family Office.md  Berlin Healthcare Consortium.md  California Teachers’ Pension Fund.md  Eleanor Voss .md  Mariana Rivera .md  Nordic Green Endowment.md  Rajesh Kapoor.md  Singapore Sovereign Wealth Fund (SSWF).md  Sofia Nguyen.md  TechBridge Ventures (Corporate VC).md
knowledge-base/company/: about.md  careers.md  ceoprofile.md  contacts.md  leadershipPhilosophy.md  locations.md  messageFromCEO.md  overview.md
knowledge-base/employee/: Akira-Tanaka.md  Amir-Khan.md  Elena-Vargas.md  Fatima-Al-Mansoori.md  Gagan-Goswami.md  Isabella-Rossi.md  Liam-O'Connor.md  Nia-Okafor.md  Priya-Sharma.md  Rajiv-Kapoor.md  Sophie-Moreau.md
knowledge-base/kyc/: kycdata.md
knowledge-base/products/: Aurora-Horizon-ESG-Equity-Fund.md  Aurora-Venture-Partners.md  Emerging-Markets-Debt-Opportunities.md  Global-Real-Assets-Trust.md  NextGen-Digital-Wealth-Platform.md  PeakAlpha-AI-Multi-Strategy-Fund.md
kyc-react-ui/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
kyc-react-ui/src/: App.tsx
kyc-react-ui/src/components/common/: ErrorBoundary.tsx  MessageBox.tsx
kyc-react-ui/src/config/: api.ts
kyc-react-ui/src/contexts/: KYCContext.tsx
kyc-react-ui/src/services/: KYCService.ts  WebSocketService.ts
kyc-react-ui/src/types/: kyc.ts
src/kyc_crew/: __main__.py  crew.py  main.py  main_api.py  ui.js
(+3 files in other folders)
