[project]
name = "kyc_crew"
version = "0.1.0"
description = "kyc-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
kyc_crew = "kyc_crew.main:run"
run_crew = "kyc_crew.main:run"
train = "kyc_crew.main:train"
replay = "kyc_crew.main:replay"
test = "kyc_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
